--- a/style.css
+++ b/style.css
@@ -15,12 +15,17 @@ body {
   font-family: Lato, sans-serif;
 }
 
+h1 {
+  text-align: center;
+}
+
 /* Text styles */
 .Page-Title {
   font-size: 52px;
   font-weight: 900;
   line-height: 1.23;
   letter-spacing: 0.6px;
+  text-align: left;
   color: var(--white);
 }
 .Section-Title-Black {
@@ -28,7 +33,6 @@ body {
   font-weight: 900;
   line-height: 1.4;
   letter-spacing: 0.4px;
-  text-align: center;
   color: var(--dark);
 }
 .Section-Title-White {
@@ -36,15 +40,16 @@ body {
   font-weight: bold;
   line-height: 1.4;
   letter-spacing: 0.5px;
-  text-align: center;
   color: var(--white);
+}
+.contact .Section-Title-White {
+  text-align: left;
 }
 .Section-Title {
   font-size: 40px;
   font-weight: bold;
   line-height: 1.4;
   letter-spacing: 0.4px;
-  text-align: center;
   color: var(--dark);
 }
 .Card-Title {
@@ -58,13 +63,13 @@ body {
   font-size: 32px;
   font-weight: bold;
   line-height: 1.13;
+  text-align: left;
   color: var(--dark);
 }
 .Quote {
   font-family: CrimsonText;
   font-size: 28px;
   line-height: 1.61;
-  text-align: center;
   color: var(--dark);
 }
 .Card-Title-Small {
@@ -77,7 +82,6 @@ body {
   font-size: 22px;
   font-weight: bold;
   line-height: 1.27;
-  text-align: center;
   color: var(--dark);
 }
 .Tagline {
@@ -104,4 +108,8 @@ body {
 }
 .dark {
   background-color: var(--dark);
+}
+.wrap {
+  width: 960px;
+  margin: 0 auto;
 }
