--- a/style.css
+++ b/style.css
@@ -113,3 +113,15 @@ h1 {
   max-width: 960px;
   margin: 0 auto;
 }
+
+/* Menu */
+.menu {
+  display: flex;
+  margin: 0 -10px;
+}
+.menu-item {
+    margin: 0 10px;
+}
+.logo {
+  margin-right: auto;
+}
