nav better styles

--- a/style.css
+++ b/style.css
@@ -120,18 +120,21 @@ h1 {
 }
 .menu {
   display: flex;
-  margin: 0 -10px;
 }
 .menu-item {
-  margin: 0 20px;
+  margin: 0 10px;
   font-size: 14px;
-  color: white;
+  color: var(--white);
   text-decoration: none;
+  font-weight: bold;
   padding: 5px 15px;
 }
 .logo {
+  margin-left: 0;
   margin-right: auto;
 }
 .contact-button {
   background-color: var(--dark-mint);
+  margin-left: 70px;
+  margin-right: 0;
 }
