--- a/style.css
+++ b/style.css
@@ -135,6 +135,43 @@ h1 {
 }
 .contact-button {
   background-color: var(--dark-mint);
-  margin-left: 70px;
+  margin-left: 60px;
   margin-right: 0;
+}
+
+/* Our Work Cards */
+.card {
+  background-color: var(--dark-mint);
+  padding: 50px;
+  min-height: 310px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.case-study {
+  position: absolute;
+  left: 50px;
+  bottom: 50px;
+  color: var(--white);
+  font-size: 14px;
+}
+
+.card h2 {
+  max-width: 426px;
+}
+
+.orange {
+  background-color: #ff7200;
+}
+
+.pink {
+  background-color: #e23356;
+}
+
+.green {
+  background-color: #6eb152;
+}
+
+.black {
+  background-color: #282a28;
 }
