--- a/style.css
+++ b/style.css
@@ -178,3 +178,16 @@ h1 {
 .black {
   background-color: #282a28;
 }
+
+/* Meet the Team Grid */
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 288px 288px;
+  grid-column-gap: 48px;
+  grid-row-gap: 24px;
+}
+
+.grid-card {
+  background-color: var(--dark-mint);
+}
