--- a/style.css
+++ b/style.css
@@ -212,4 +212,18 @@ h1 {
 
 .book-grid a {
   align-self: end;
+  justify-self: start;
+}
+
+.button {
+  padding: 12px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--white);
+  text-decoration: none;
+  background-color: var(--dark-mint);
+}
+
+.button-blue {
+  background-color: var(--dark-sky-blue);
 }
